<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
	    
	<com.MobileAnarchy.Android.Widgets.Joystick.DualJoystickView
		android:id="@+id/dualjoystickView"
		android:layout_gravity="center_horizontal"
		android:layout_width="fill_parent" android:layout_height="175dp"
		android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal" >
			<TextView android:id="@+id/txt_dataL"
				android:text="@string/dataL_text"
				android:layout_width="120dp" android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:gravity="left" />

			<Button
			    android:id="@+id/button_A"
			    android:layout_width="90dp"
			    android:text="@string/btnA_text"
			    android:textSize="24dp"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_horizontal"
			    android:layout_marginRight="10dp" />

			<Button
			    android:id="@+id/button_B"
			    android:text="@string/btnB_text"
			    android:textSize="24dp"
			    android:layout_width="90dp"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_horizontal" />

			<TextView android:id="@+id/txt_dataR"
				android:text="@string/dataR_text"
				android:layout_width="120dp" android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:gravity="right" />
		</LinearLayout>
		
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal" >

		<Button
		    android:id="@+id/button_C"
		    android:text="@string/btnC_text"
		    android:textSize="24dp"
		    android:layout_width="90dp"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="10dp" />

		<Button
		    android:id="@+id/button_D"
		    android:text="@string/btnD_text"
		    android:textSize="24dp"
		    android:layout_width="90dp"
		    android:layout_height="wrap_content" />

		</LinearLayout>
	
	<TextView android:id="@+id/txt_status"
		android:text="@string/status_text"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />
		
</LinearLayout>
